# optee-ta-buffer-overflow

./: README.md
aes/: CMakeLists.txt
aes/host/: Makefile  evil.c  main.c  rop1.h
aes/ta/: aes_ta.c
aes/ta/include/: aes_ta.h
patches/: 0001-disable-ASLR-and-stack-protector.patch
